gateway/helloworld-go-route-external.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: helloworld-go-external
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /greetings
      backendRefs:
        - name: helloworld-go-service
          port: 8080
